# tools

./: .pre-commit-config.yaml  LICENSE  README.md
cpp/: request.cpp
python/: convert_mkv_to_images.py  convert_mkv_to_mp4.py  convert_movie_to_images.py  convert_n3r_to_images.py  cv2_cli.py  jobcan_touch.py  pillow_cli.py  recyclehub_get_all_company_info.py  slack_cli.py  util.py
python/fps/: calc_from_clocks.py  calc_from_timer.py  main.py
raspberrypi/: check_model.sh  check_model_from_rev.sh
switchbot/bash_cli/: cli.sh  config.sh  device_list.sh  device_off.sh  device_on.sh  device_status.sh  device_toggle.sh
switchbot/bash_cli/v1.0/: cli.sh  config.sh  device_list.sh  device_off.sh  device_on.sh  device_status.sh  device_toggle.sh
switchbot/python_cli/: cli.py  pyproject.toml
template/: cli_click.py  cli_docopt.py  cli_subcmd_click.py  cli_typer.py
