[tool.poetry]
name = "python-cli"
version = "0.1.0"
description = ""
authors = ["Munetaka Mizutani <mu.mizutani@gmail.com>"]
readme = "README.md"
packages = [{include = "python_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
types-requests = "^2.31.0.2"
black = "^23.7.0"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
exclude = ".venv, __pycache__"
extend-ignore = "E501,"
max-complexity = 10

[tool.isort]
include_trailing_comma = "True"
multi_line_output = 3
use_parentheses = "True"

[tool.mypy]
python_version = "3.11"
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
